--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>jQuery practice</title>
   <link rel="stylesheet"
         href="https://unpkg.com/bootstrap/dist/css/bootstrap.css">
   <style>
@@ -101,4 +101,3 @@ $('img').on('click', function() {
 
 </html>
 
-|| 'keydown'
